database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts: 
            - name: database-storage
              mountPath: /var/lib/postgresql/data/pgdata
      volumes:
         - name: database-storage
           persistentVolumeClaim:
             claimName: database-pvc
