frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
      metadata:
        labels:
          app: frontend
      spec:
        containers:
          - name: frontend
            image: cloud-app-frontend:1.1
            imagePullPolicy: Never
            ports:
              - containerPort: 80
